tests/ui/macros/rfc-3086-metavar-expr/out-of-bounds-arguments.stderr
error: depth parameter on meta-variable expression `count` must be less than 4
  --> $DIR/out-of-bounds-arguments.rs:7:14
   |
LL |             ${count(foo, 10)},
   |              ^^^^^^^^^^^^^^^^

error: depth parameter on meta-variable expression `index` must be less than 3
  --> $DIR/out-of-bounds-arguments.rs:19:18
   |
LL |                 ${index(10)},
   |                  ^^^^^^^^^^^

error: depth parameter on meta-variable expression `length` must be less than 2
  --> $DIR/out-of-bounds-arguments.rs:32:18
   |
LL |                 ${length(10)}
   |                  ^^^^^^^^^^^^

error: aborting due to 3 previous errors

